<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jhon.smi_servicios.DriverServicesActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Conductor Elegido"
    android:textColor="#000000"
    android:textSize="@dimen/big_letter"
    android:gravity="center"
    android:layout_margin="@dimen/smal_margin"
    />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/driver_services_actual_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/actual_direction"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/driver_services_future_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/future_direction"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/driver_services_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="fecha y hora"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>




    </ScrollView>

    <Button
        android:id="@+id/driver_services_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:background="@color/colorPrimary"
        android:textColor="#000000"
        />
</LinearLayout>
